--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Portfólio</title>
 </head>
 <body>
     
+    <div class="container">
+        <header>
+            <div class="img-wrapper">
+                <img src="bg.jpg" alt="">
+            </div>
+            <div class="banner">
+                <h1>Web Developer & Front End Designer</h1>
+                <p> Gabriel Marinha Tavares</p>
+                <button>SAIBA MAIS</button>
+            </div>
+        </header>
+
+    </div>
+
 </body>
 </html>
